fixed spacing

--- a/public/css/app2.css
+++ b/public/css/app2.css
@@ -190,7 +190,7 @@ a:hover {
 	border-color: #fff;
 }
 .content {
-	margin-top: 61px;
+	margin-top: 51px;
 	min-height: 37em;
 }
 .navbar {
